feat: return filters AST in search API call
